--- a/myApp/css/style1.css
+++ b/myApp/css/style1.css
@@ -33,14 +33,10 @@ table, td{
 	width: 100%;
 }
 
-.batch_table tr td:nth-child(1) select{
-	/* width: 45px; */
-}
-
-
 .batch_sche{
 	margin: 10px;
 	width: 250px;
+	width: 90%;
 	text-align: center;
 	font-weight: bold;
 }
