--- a/myApp/css/style1.css
+++ b/myApp/css/style1.css
@@ -36,7 +36,8 @@ table, td{
 .batch_sche{
 	margin: 10px;
 	width: 250px;
-	width: 90%;
+	width: 95%;
+	height: 500px;
 	text-align: center;
 	font-weight: bold;
 }
