--- a/schezzle/css/style1.css
+++ b/schezzle/css/style1.css
@@ -67,9 +67,18 @@ button, select{
 
 
 .ind_title{
-	width: 100%;
+	width: 500px;
 }
 
 .ind_div{
-	width: 100%;
+	width: 500px;
+}
+
+@media screen and (max-width: 768px) {
+	.ind_title{
+		width: 100%;
+	}
+	.ind_div{
+		width: 100%;
+	}
 }
